--- a/lagou_spider/install.txt
+++ b/lagou_spider/install.txt
@@ -4,97 +4,13 @@ python2的安装包
 	pip freeze | tee requirements.txt # 输出本地包环境至文件
 	pip install -r requirements.txt # 根据文件进行包安装
 
-altgraph==0.10.2
-appnope==0.1.0
-backports-abc==0.5
-backports.shutil-get-terminal-size==1.0.0
-backports.ssl-match-hostname==3.5.0.1
-bdist-mpkg==0.5.0
-bonjour-py==0.3
-certifi==2017.11.5
-chardet==3.0.4
-crypto==1.4.1
-decorator==4.1.2
-enum34==1.1.6
-idna==2.6
-ipython==5.5.0
-ipython-genutils==0.2.0
-lxml==4.1.1
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-MySQL-python==1.2.5
-Naked==0.1.31
-numpy==1.8.0rc1
-pathlib2==2.3.0
-pexpect==4.3.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-py2app==0.7.3
-pycrypto==2.6.1
-Pygments==2.2.0
-pymongo==3.6.0
-PyMySQL==0.8.0
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-PyYAML==3.12
-requests==2.18.4
-scandir==1.6
-scipy==0.13.0b1
-shellescape==3.4.1
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.4.1
-SQLAlchemy==1.2.0
-tornado==4.2.1
-torndb==0.3
-traitlets==4.3.2
-urllib3==1.22
-wcwidth==0.1.7
-xattr==0.6.4
-xlrd==1.1.0
-xlwt==1.3.0
-zope.interface==4.1.1
-
 python3的安装包
+lxml==4.2.1
+requests==2.18.4
+PyMySQL==0.8.0
 SQLAlchemy==1.2.6
-django==1.8.2
+gevent==1.2.2
+schedule==0.5.0
+
+
 
